For batch clients test log collection.

Version 1.0:
Happy road version.
First code on 2011-07-15.

Version 1.1:
Add cleanup.
Fix bugs.
Code on 2011-07-20.

Version 1.2:
Rename log file to a new one if it reaches the max size.
Add processing of Expect.
Code on 2011-07-22.

Version 1.3:
Fix bugs: add "ctx->main->count--;" in post_handler.
Code on 2011-07-25.

Version 1.4:
Add urldecode.
Fix bugs.
Code on 2011-07-26.

Version 1.5:
Add backend processing.
Code on 2011-07-29.

Version 1.6:
Fix bug: parse log_collection, add "cf->args->nelts == 3".
Fix bug: if redirect_to_backend is 0, do not run script
Code on 2011-08-10.

Version 1.7:
Open or close urldecode depends on nginx.conf.
Code on 2011-08-12.

Version 2.0:
Add compatibility for versions above 1.3.9.
Code on 2016-03-28.

Fix a bug: initialize rc = NGX_OK in ngx_http_log_collection_post_handler.
Code on 2016-06-10.

Fix a bug: initialize rest = 0 in ngx_http_log_collection_flush_to_file.
Code on 2016-09-26.

Version 2.1:
Recode body reading functionality,
refering to https://github.com/hongzhidao/nginx-upload-module, many thanks.
Code on 2016-10-09.

Version 2.2:
Rename some functions and variables in order to be easily.
Add data purification.
Code on 2016-10-11.

Version 2.3:
Beautify the code.
Add backend processing depends on the upload content.
Code on 2016-10-15.

Version 2.4:
Fix a bug: if redirect to backend disabled, nothing stored.
Fix a bug: urldecode ' ' -> '+'
Code on 2016-10-16.

Add content length in normal response.
Optimize code.
Code on 2016-10-17 & 2016-10-18.

Fix the compatibility problem.
Code on 2016-10-21.

Fix the bug that the garbage data in buffer will lead to wrongly parsing.
Add Changelog file.
Code on 2016-10-21.
