@@ -29,7 +29,7 @@ Code on 2011-07-29.
 
 Version 1.6:
 Fix bug: parse log_collection, add "cf->args->nelts == 3".
-Fix bug: if redirect_to_backend is 0, do not run script
+Fix bug: if redirect_to_backend is 0, do not run script.
 Code on 2011-08-10.
 
 Version 1.7:
@@ -76,4 +76,7 @@ Code on 2016-10-21.
 Fix the bug that the garbage data in buffer will lead to wrongly parsing.
 Add Changelog file.
 Code on 2016-10-21.
+
+Remove the upload functionality using chunk.
+Code on 2017-01-13.
 
